--- a/EvoMind-Fe/package.json
+++ b/EvoMind-Fe/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.3",
     "next": "14.2.3",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
