--- a/EvoMind-Fe/package.json
+++ b/EvoMind-Fe/package.json
@@ -25,14 +25,17 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "motion": "^12.0.3",
     "next": "14.2.3",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
